bin_PROGRAMS = bibledit-gtk

bibledit_gtk_SOURCES = \
		bibledit.cpp \
		utilities.cpp \
    	tiny_utilities.cpp \
		bible.cpp \
		usfmtools.cpp \
		mainwindow.cpp \
		dialoglistview.cpp \
		dialogsystemlog.cpp \
		htmlbrowser.cpp \
		track.cpp \
		dialogreplace.cpp \
		dialogreplacing.cpp \
		windowsoutpost.cpp \
		dialoggotoreference.cpp \
	    projectutils.cpp \
	    dialogproject.cpp \
	    usfm.cpp \
	    dialogwait.cpp \
	    directories.cpp \
	    ustring.cpp \
	    dialogsearchspecial.cpp \
	    referenceutils.cpp \
	    pdfviewer.cpp \
        notes_utils.cpp \
        date_time_utils.cpp \
        dialogfindnote.cpp \
        dialogimportnotes.cpp \
        dialognotes.cpp \
        dialogentry.cpp \
        dialogcompare.cpp \
        compareutils.cpp \
        export_utils.cpp \
        bibletime.cpp \
        dialogprintprefs.cpp \
        paper.cpp \
        xmlutils.cpp \
        dialogprintproject.cpp \
        stylesheetutils.cpp \
        dialogstylesheet.cpp \
        style.cpp \
        dialogentry3.cpp \
        printproject.cpp \
        xmlfo-utils.cpp \
        search_utils.cpp \
        dialogshownotes.cpp \
        dialogdate.cpp \
        gwrappers.cpp \
        gtkwrappers.cpp \
        usfm-inline-markers.cpp \
        completion.cpp \
        combobox.cpp \
        keyboard.cpp \
        listview.cpp \
        scripturechecks.cpp \
        versification.cpp \
        dialogrefexchange.cpp \
        dialogcheck.cpp \
        dialogeditlist.cpp \
        shell.cpp \
        export_translation_notes.cpp \
        sqlite_reader.cpp \
        dialogarea.cpp \
        unixwrappers.cpp \
        highlight.cpp \
        dialogopenstylesheet.cpp \
        note_editor.cpp \
        notecaller.cpp \
        xslfofootnoteparagraph.cpp \
        dialoginsertnote.cpp \
        notetemplate.cpp \
        dialogparallelbible.cpp \
        print_parallel_bible.cpp \
        mapping.cpp \
        swordnote.cpp \
        dialogselectchapters.cpp \
        portion_utils.cpp \
        scriptureportions.cpp \
        uname.cpp \
        layout.cpp \
        import.cpp \
        clean.cpp \
        categorize.cpp \
        progresswindow.cpp \
        books.cpp \
        dialogbook.cpp \
        generalconfig.cpp \
        screen.cpp \
        projectconfig.cpp \
        gui.cpp \
        check_validate_usfm.cpp \
        checks.cpp \
        check_count_words.cpp \
        dialogoutpost.cpp \
        dialognotestransfer.cpp \
        dialogchapternumber.cpp \
        httpd.cpp \
        opendocument.cpp \
        odtutils.cpp \
        odtnotes.cpp \
        help.cpp \
        color.cpp \
        dialogmychecks.cpp \
        check_count_usfms.cpp \
        check_count_characters.cpp \
        check_chapters_verses.cpp \
        check_compare_usfm.cpp \
        check_unwanted_patterns.cpp \
        check_unwanted_words.cpp \
        check_repetition.cpp \
        check_capitalization.cpp \
        check_matching_pairs.cpp \
        rc4.c \
        dialogoriginreferences.cpp \
        originreferences.cpp \
        dialogtidy.cpp \
        tidy.cpp \
        shortcuts.cpp \
        upgrade.cpp \
        reference.cpp \
        keyterms.cpp \
        dialognotesupdate.cpp \
        guiselectproject.cpp \
        check_markers_spacing.cpp \
        gui_navigation.cpp \
        myfnmatch.c \
        statistics.cpp \
        backup.cpp \
        dialogrevert.cpp \
        dialogselectbooks.cpp \
        resource_utils.cpp \
        html.cpp \
        dialogreviewanchors.cpp \
        dialogeditnote.cpp \
        biblenotes.cpp \
        dialogwordlist.cpp \
        wordlist.cpp \
        dialogfontcolor.cpp \
        dialognewstylesheet.cpp \
        outline.cpp \
        settings.cpp \
        session.cpp \
        session_highlights.cpp \
        bookdata.cpp \
        config.xml.cpp \
        localizedbooks.cpp \
        versifications.cpp \
        mappings.cpp \
        dialoggui.cpp \
        password.cpp \
        gui_features.cpp \
        dialogprintreferences.cpp \
        print_parallel_references.cpp \
        dialogfixmarkers.cpp \
        fixmarkers.cpp \
        check_ref_inventory.cpp \
        check_validate_refs.cpp \
        dialogtextreplacement.cpp \
        textreplacement.cpp \
        temporal.cpp \
        ot-quotations.cpp \
        parallel_passages.cpp \
        ot-nt-parallels.cpp \
        check_parallel_passages.cpp \
        dialogpdfviewer.cpp \
        displayprojectnotes.cpp \
        styles.cpp \
        editor_aids.cpp \
        dialoginserttable.cpp \
        git.cpp \
        usfm2xslfo_utils.cpp \
        hyphenate.cpp \
        reporting.cpp \
        planning.cpp \
        dialogeditstatus.cpp \
        dialogtaskduration.cpp \
        htmlwriter.cpp \
        dialogviewplanning.cpp \
        dialogplanningsetup.cpp \
        resource.cpp \
        dialogbooknames.cpp \
        dialogradiobutton.cpp \
        dialogresourceconverter.cpp \
        resource_conversion_utils.cpp \
        convert.cpp \
        textviewer.cpp \
        roman.cpp \
        project_memory.cpp \
        dialogmerge.cpp \
        merge_utils.cpp \
        maintenance.cpp \
        scripts.cpp \
        dialogfilters.cpp \
        dialogdictionary.cpp \
        spelling.cpp \
        dialogeditdictionary.cpp \
        check_sentence_structure.cpp \
        dialogcheckbutton.cpp \
        dialogxfernotes2text.cpp \
        htmlcolor.cpp \
        text2pdf.cpp \
        text2pdf_utils.cpp \
        text2pdf_area.cpp \
        text2pdf_ref_area.cpp \
        text2pdf_block.cpp \
        text2pdf_page.cpp \
        text2pdf_input.cpp \
        text2pdf_layout.cpp \
        text2pdf_big_block.cpp \
        text2pdf_intermediate.cpp \
        usfm2text.cpp \
        dialogtext2pdf.cpp \
        windowshowrelatedverses.cpp \
        windowmerge.cpp \
        windowresource.cpp \
        windowoutline.cpp \
        windowcheckkeyterms.cpp \
        windowstyles.cpp \
        windownotes.cpp \
        dialogprojectnote.cpp \
        windowreferences.cpp \
        windoweditor.cpp \
        compress.cpp \
        localizednumerals.cpp \
        assistantimportkeyterms.cpp \
        assistants.cpp \
        assistantdeletekeyterms.cpp \
        assistantchanges.cpp \
        widgetdate.cpp \
        usfmview.cpp \
        dialogcompareprefs.cpp \
        windowcheckusfm.cpp \
        usfm2osis.cpp \
        usfmstandard.cpp \
        osis.cpp \
        assistantremoterepository.cpp \
        gui_display_changes.cpp \
				stylesheet.cpp \
				referencememory.cpp \
				webkitbrowser.cpp \
				assistantresource.cpp \
				snapshots.cpp \
				windowtimednotifier.cpp \
				assistantbackup.cpp \
				assistantrestore.cpp \
				restore.cpp \
				guiselectbibles.cpp \
				assistantexport.cpp \
				java.cpp \
				dialogbulkspelling.cpp \
				dialogplanningedit.cpp \
				dialoglistviewm.cpp \
				htmlwriter2.cpp \
				dialogmaintenance.cpp \
				kjv.cpp \
				assistantimport.cpp \
				mechonmamre.cpp \
				bibleworks.cpp \
				onlinebible.cpp \
				robinson.cpp \
				morphology.cpp \
				greek.cpp \
				startup.cpp \
				dialogyesnoalways.cpp \
				floatingwindow.cpp \
				windowdata.cpp \
				editor.cpp \
				editoractions.cpp \
				nanohttp.cpp \
				c_url.cpp \
				urltransport.cpp \
				dialogreferencesettings.cpp \
				printproject2.cpp \
				usfm2xetex.cpp \
				xetex2pdf.cpp \
				runtime.cpp \
				xetex.cpp \
				dialogxetex.cpp \
				paratext.cpp \
				vcs.cpp \
				git-exec.cpp

EXTRA_DIST = *.h .indent.pro update-copyright

AM_CXXFLAGS = -Wall 
AM_CXXFLAGS += `xml2-config --cflags`
AM_CXXFLAGS += $(GOBJECT_CFLAGS)
AM_CXXFLAGS += $(GTHREAD_CFLAGS)
AM_CXXFLAGS += $(GLIB_CFLAGS)
AM_CXXFLAGS += $(GTK_CFLAGS)
AM_CXXFLAGS += $(SQLITE_CFLAGS)
AM_CXXFLAGS += $(ENCHANT_CFLAGS)
AM_CXXFLAGS += $(GTKHTML38_CFLAGS)
AM_CXXFLAGS += $(GTKHTML314_CFLAGS)
AM_CXXFLAGS += $(GTKSOURCEVIEW_CFLAGS)
AM_CXXFLAGS += $(WEBKIT_CFLAGS)
AM_CXXFLAGS += $(DBUSGLIB_CFLAGS)
AM_CXXFLAGS += $(LIBSOUP_CFLAGS)

LIBS = -Wall 
LIBS += `xml2-config --libs`
LIBS += $(GOBJECT_LIBS)
LIBS += $(GTHREAD_LIBS)
LIBS += $(GLIB_LIBS)
LIBS += $(GTK_LIBS)
LIBS += $(SQLITE_LIBS)
LIBS += $(ENCHANT_LIBS)
LIBS += $(GTKHTML38_LIBS)
LIBS += $(GTKHTML314_LIBS)
LIBS += $(GTKSOURCEVIEW_LIBS)
LIBS += $(WEBKIT_LIBS)
LIBS += $(DBUSGLIB_LIBS)
LIBS += $(LIBSOUP_LIBS)

if LINUX
endif
if DARWIN
endif
if WIN32
LIBS += -mwindows -lws2_32
endif

CLEANFILES = *~
